Fix issue with color contrast (#1497)

--- a/static/css/sass/cdr_homepage.scss
+++ b/static/css/sass/cdr_homepage.scss
@@ -148,6 +148,10 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   box-shadow: inset 0 0 10px black;
+
+  .button.is-link {
+    font-size: 1.5rem;
+  }
 }
 
 .banner {
